--- a/src/app/config/config.page.html
+++ b/src/app/config/config.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>config</ion-title>
+    <ion-title>Configuracion</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -8,13 +8,15 @@
   <ion-list>
     <!-- Sliding item with text options on both sides -->
     <ion-item-sliding>
+      <ion-item href="#">
       <ion-item-options side="start">
         <ion-item-option (click)="favorite(item)">Favorite</ion-item-option>
         <ion-item-option color="danger" (click)="share(item)">Share</ion-item-option>
       </ion-item-options>
   
       <ion-item>
-        <ion-label>Item Options</ion-label>
+        <ion-icon name="enter-outline"></ion-icon> <ion-label>Iniciar sesion/registrarse</ion-label> <ion-icon style="position:fixed; right: 30px;" name="chevron-forward-outline"></ion-icon>
+      </ion-item>
       </ion-item>
   
       <ion-item-options side="end">
