--- a/src/app/tablinks/tablinks.page.html
+++ b/src/app/tablinks/tablinks.page.html
@@ -1,21 +1,25 @@
+
+
+<ion-content [fullscreen]="true">
+
+</ion-content>
+
 <ion-tabs>
   <ion-tab-bar slot="bottom">
 
     <ion-tab-button tab="perfil">
       <ion-icon name="person"></ion-icon>
-      <ion-label>Perfil</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="inicio">
       <ion-icon name="Home"></ion-icon>
-      <ion-label>Inicio</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="config">
       <ion-icon name="cog"></ion-icon>
-      <ion-label>Configuracion</ion-label>
     </ion-tab-button>
-    
+
   </ion-tab-bar>
-  
+</ion-tabs>
+
 
