--- a/src/app/tablinks/tablinks.page.scss
+++ b/src/app/tablinks/tablinks.page.scss
@@ -1,27 +1,14 @@
-#checkbox {
-    text-align: center;
-  
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 100%;
-    transform: translateY(-50%);
+
+  ion-tab-bar{
+    --border: none;
+    --background: rgba(175, 175, 175, 0.3);
+    backdrop-filter: blur(6px);
+    margin: 16px 20px;
+    border-radius: 16px;
+    box-shadow:
+    0px 3px 6px 0px rgba(0,0,0,0.04)
+    0px 1px 3px 0px rgba(0,0,0,0.02);;
   }
-  
-  #checkbox strong {
-    font-size: 50px;
-    line-height: 50px;
-  }
-  
-  #checkbox p {
-    font-size: 50px;
-    line-height: 50px;
-  
-    color: #8c8c8c;
-  
-    margin: 0;
-  }
-  
-  #checkbox a {
-    text-decoration: none;
+  ion-icon{
+    color: rgb(43, 43, 43);
   }
