rellenando el config

--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -10,7 +10,7 @@
 
     <ion-slide>
       <ion-card>
-        <img src="">
+        <img src="/assets/img/1.png.png">
       </ion-card>
     </ion-slide>
 
