--- a/src/app/tablinks/tablinks.page.html
+++ b/src/app/tablinks/tablinks.page.html
@@ -7,16 +7,20 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
 
+    <ion-tab-button tab="inicio">
+      <ion-icon name="home"></ion-icon> 
+    </ion-tab-button>
+
     <ion-tab-button tab="perfil">
       <ion-icon name="person"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="inicio">
-      <ion-icon name="Home"></ion-icon>
-    </ion-tab-button>
-
     <ion-tab-button tab="config">
       <ion-icon name="cog"></ion-icon>
+    </ion-tab-button>
+
+    <ion-tab-button tab="Compra">
+      <ion-icon name="cart"></ion-icon>
     </ion-tab-button>
 
   </ion-tab-bar>
