--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -1,7 +1,11 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
-    <ion-title>Bienvenido</ion-title>
-  </ion-toolbar>
+
+  <div class="header">
+    <h1>Bienvenido</h1>
+    <div class="avatar">
+      <ion-img src="/assets/icon/Asian Man.png"></ion-img>
+    </div>
+  </div>
 </ion-header>
 
 <ion-content [fullscreen]="true">
@@ -34,15 +38,6 @@
   </div>
 
 
-  <ion-card>
-    <ion-grid>
-        <ion-row class="ion-text-center">
-            <ion-col size="4" routerLink="/page1">
-                <ion-icon name="home" color="dark" size="large"></ion-icon>
-                <p>Audifonos</p>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-</ion-card>
+
 
 </ion-content>
