--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -1,4 +1,33 @@
 
+  .header{
+    padding-left: 15px;
+    padding-right: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    h1{
+      font-size: 2rem;
+      font-weight: 600;
+      color: rgb(34, 34, 34);
+      margin: 24;
+    }
+    .avatar{
+      width: 50px;
+      height: 50px;
+      background-color: rgba($color: #e6e6e6, $alpha: 1.0);
+      border-radius: 50%;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+      overflow: hidden;
+      ion-img{
+        width: 90%;
+        height: 90%;
+      }
+    }
+
 ion-card{
   //width: 100%;
   //height: 160px;
@@ -21,4 +50,7 @@ ion-card{
 
 .swiper-slide {
   transition: 400ms all ease-in-out;
+}
+
+
 }
