--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -1,4 +1,7 @@
 <ion-header class="ion-no-border">
+</ion-header>
+
+<ion-content [fullscreen]="true">
 
   <div class="header">
     <h1>Bienvenido</h1>
@@ -6,9 +9,8 @@
       <ion-img src="/assets/icon/Asian Man.png"></ion-img>
     </div>
   </div>
-</ion-header>
 
-<ion-content [fullscreen]="true">
+
   <ion-slides [options]="option" class="ion-margin-top">
 
     <ion-slide>
@@ -31,13 +33,19 @@
 
   </ion-slides>
 
-<!---Categorias-->
+<!---Buscador-->
+  <app-searchbar>
 
+  </app-searchbar>
+
+
+  <!---Categorias-->
   <div class="categories">
-
+    <app-category-item *ngFor="let item of categories" [item]="item"></app-category-item>
   </div>
 
 
+  <!---Productos-->
 
 
 </ion-content>
