--- a/src/app/config/config.page.html
+++ b/src/app/config/config.page.html
@@ -8,7 +8,7 @@
   <ion-list>
     <!-- Sliding item with text options on both sides -->
     <ion-item-sliding>
-      <ion-item href="#">
+      <ion-item href="login">
       <ion-item-options side="start">
         <ion-item-option (click)="favorite(item)">Favorite</ion-item-option>
         <ion-item-option color="danger" (click)="share(item)">Share</ion-item-option>
