--- a/src/app/tablinks/tablinks.page.html
+++ b/src/app/tablinks/tablinks.page.html
@@ -19,7 +19,7 @@
       <ion-icon name="cog"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="Compra">
+    <ion-tab-button tab="Carrito">
       <ion-icon name="cart"></ion-icon>
     </ion-tab-button>
 
