--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -22,9 +22,10 @@
         </ion-chip>
       </h6>
     </div>
-    <ion-button expand="full" color="primary">Editar perfil</ion-button>
-    <ion-button expand="full" color="secondary">Correo</ion-button>
-    <ion-button expand="full" color="secondary">Mis pedidos</ion-button>
+
+    <ion-button expand="block" color="secondary">Editar perfil</ion-button>
+    <ion-button expand="block" color="secondary">Correo</ion-button>
+    <ion-button expand="block" color="secondary">Mis pedidos</ion-button>
   </div>
 
 
