--- a/src/app/perfil/perfil.page.scss
+++ b/src/app/perfil/perfil.page.scss
@@ -1,5 +1,5 @@
 ion-content {
-  --background: url(/src/assets/img/renato-ramos-puma-Zs7IokljzTM-unsplash.jpg) no-repeat top center/cover fixed, #fff;
+  --background: url(/src/assets/img/renato-ramos-puma-Zs7IokljzTM-unsplash.jpg) no-repeat top center/cover fixed, #1466ff;
   position: relative;
   height: 100%;
   width: 100%;
@@ -26,16 +26,18 @@ ion-toolbar {
               border-radius: 50%;
               position: absolute;
               bottom: calc(-1*(80px + 4px));
-              border: 4px solid #1280c9;
-              background-color: #fff;
+              //border: 4px solid #1280c9;
+              backdrop-filter: blur(6px);
+              background-color: rgba(255, 255, 255, 0.425);
           }
       }
   }
 }
 .card-body {
-  background-color: #e6e6e6;
+  background-color: #ffffff;
   padding: 30px;
   height: calc(100vh - (200px + 56px));
+  border-radius: 20px;
   overflow: hidden;
 
   .user-meta {
@@ -55,4 +57,10 @@ ion-toolbar {
       }
   }
 }
+
+ion-button{
+  --border-radius: 14px;
+}
+
+
 
