--- a/src/app/components/searchbar/searchbar.component.scss
+++ b/src/app/components/searchbar/searchbar.component.scss
@@ -5,6 +5,6 @@ ion-searchbar{
   --placeholder-fonr-weight:600;
   --placeholder-opacity:0.2;
 
-  //padding: 0;
+  padding: 0;
   margin-bottom: 2rem;
 }
