--- a/src/app/perfil/perfil.page.scss
+++ b/src/app/perfil/perfil.page.scss
@@ -1,8 +1,5 @@
 ion-content {
-  --background: url(/src/assets/img/renato-ramos-puma-Zs7IokljzTM-unsplash.jpg) no-repeat top center/cover fixed, #fff;
-  position: relative;
-  height: 100%;
-  width: 100%;
+  --background: #1761ff;
 }
 
 ion-toolbar {
@@ -26,17 +23,22 @@ ion-toolbar {
               border-radius: 50%;
               position: absolute;
               bottom: calc(-1*(80px + 4px));
-              border: 4px solid #1280c9;
-              background-color: #fff;
+              //border: 3px solid #000000;
+              background-color: rgba(252, 252, 252, 0.411);
+              backdrop-filter: blur(6px);
           }
       }
   }
 }
 .card-body {
-  background-color: #e6e6e6;
-  padding: 30px;
-  height: calc(100vh - (200px + 56px));
-  overflow: hidden;
+  height: 200px;
+  width: 100%;
+  background-color: #ffffff;
+  border-radius: 3rem 3rem 0 0;
+  //bottom: 0;
+  //padding: 30px;
+  height: calc(100vh - (100px + 56px));
+  overflow: none;
 
   .user-meta {
       padding-top: 40px;
@@ -44,15 +46,44 @@ ion-toolbar {
       .playername {
           font-size: 24px;
           font-weight: 600;
-          color: #303940;
+          color: #000000;
       }
 
       .country {
           font-size: 90%;
-          color: #949ea6;
+          color: #000000;
           text-transform: uppercase;
           margin: 0 auto;
       }
+      h6{
+        color: #000000;
+      }
+      ion-icon{
+        color: #1761ff;
+      }
+      ion-label{
+        color: #1761ff;
+      }
   }
 }
+
+.panel{
+  width: 80px;
+}
+
+
+ion-button{
+  --background: #141414;
+  --width: 60px;
+     height: 50px;
+  --border-radius: 15px;
+}
+
+ion-card{
+    width: 200%;
+
+    box-shadow: none;
+    border-radius: 10px;
+  }
+
 
