--- a/src/global.scss
+++ b/src/global.scss
@@ -24,6 +24,9 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+@import "./theme/font.scss";
+
+
 
 
 ion-searchbar{
@@ -41,3 +44,5 @@ ion-searchbar{
     }
   }
 }
+
+
