slide principal definicion

--- a/src/app/components/searchbar/searchbar.component.scss
+++ b/src/app/components/searchbar/searchbar.component.scss
@@ -1,6 +1,8 @@
 ion-searchbar{
-  --box-shadow: none;
-  --background: #f3f3f3;
+  --box-shadow:
+   0px 3px 6px 0px rgba(0, 0, 0, 0.048),
+   0px 1px 3px 0px rgba(0, 0, 0, 0.322);
+  --background: #ffffff;
   --border-radius: 1.2rem;
   --placeholder-fonr-weight:600;
   --placeholder-opacity:0.2;
