--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -21,7 +21,7 @@
 
   <div class="card-body">
     <div class="user-meta ion-text-center">
-      <h3 class="playername">User 1</h3>
+      <h3 class="playername">Miguel</h3>
       <h5 class="country">Plata</h5>
       <h6 class="ranking">Notificaciones: <ion-chip>
         <ion-icon name="notifications"></ion-icon>
@@ -30,10 +30,24 @@
       </h6>
     </div>
 
-      <ion-button expand="block">Editar Nombre</ion-button>
-      <ion-button expand="block">Editar contraseña</ion-button>
-      <ion-button expand="block">Editar correo</ion-button>
+    <div class="opciones">
+          <ion-card>
+            <p>EDITAR PERFIL</p>
+            <img src="/assets/icon/3d icon/Key.png" alt="">
+          </ion-card>
 
+          <ion-card>
+            <p>FAVORITOS</p>
+            <img src="/assets/icon/3d icon/Fire.png" alt="">
+          </ion-card>
+
+          <ion-card>
+            <p>COMPRAS</p>
+            <img src="/assets/icon/3d icon/Shopping.png" alt="">
+          </ion-card>
+    </div>
+
+      <h5>Tarjetas</h5>
       <ion-slides [options]="option" class="ion-margin-top">
         <ion-slide>
           <ion-card>
