--- a/src/app/components/category-item/category-item.component.scss
+++ b/src/app/components/category-item/category-item.component.scss
@@ -3,9 +3,12 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  box-shadow:
+   0px 3px 6px 0px rgba(0,0,0, 0.04),
+   0px 1px 3px 0px rgba(0,0,0, 0.02);
 
   .image-card {
-    background-color: #f3f3f3;
+    background-color: #ffffff;
     padding: 0.8rem;
     width: 60px;
       height: 60px;
