--- a/src/app/perfil/perfil.page.scss
+++ b/src/app/perfil/perfil.page.scss
@@ -10,8 +10,7 @@ ion-toolbar {
   margin: 0 auto;
 
   .header {
-      height: 200px;
-
+      height: 150px;
       .avatar {
           width: 160px;
           height: 160px;
@@ -20,11 +19,11 @@ ion-toolbar {
 
           img {
               display: block;
-              border-radius: 50%;
+              border-radius: 25%;
               position: absolute;
-              bottom: calc(-1*(80px + 4px));
+              bottom: calc(1*(2px + 25px));
               //border: 3px solid #000000;
-              background-color: rgba(252, 252, 252, 0.411);
+              background-color: rgba(252, 252, 252, 0.253);
               backdrop-filter: blur(6px);
           }
       }
@@ -65,11 +64,6 @@ ion-toolbar {
   }
 }
 
-.panel{
-  width: 80px;
-}
-
-
 ion-button{
   --background: #141414;
   --width: 60px;
@@ -77,11 +71,34 @@ ion-button{
   --border-radius: 15px;
 }
 
-ion-card{
-    width: 200%;
+.opciones{
+  align-items: center;
+  text-align: center;
+  box-sizing:content-box;
+  display: flex;
+  grid-gap: 2px;
 
-    box-shadow: none;
-    border-radius: 10px;
+  ion-card{
+    width:100px;
+     height: 120px;
+    //border-radius: 15%;
+    background: #1761ff;
   }
+  .image-card{
+    //padding: 0.8rem;
+    width: 30px;
+      height: 30px;
+    //border-radius: 10px;
+  }
+
+  img{
+    height: 45px;
+  }
+
+  p{
+    color: #ffffff;
+    font-weight: 20;
+  }
+}
 
 
