--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -30,11 +30,6 @@ ion-content {
     }
 }
 
-//buscador
-app-searchbar{
-  margin-top: 50px;
-}
-
 .categories{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -82,4 +77,79 @@ app-searchbar{
 
 .swiper-slide {
   transition: 400ms all ease-in-out;
+}
+
+
+.in{
+  ion-card{
+    margin-top: 0px;
+    width: 100%;
+    height: 100px;
+    box-shadow:
+   0px 3px 6px 0px rgba(0, 0, 0, 0.247);
+    border-radius: 8px;
+
+    img{
+      object-fit: cover;
+      width: 100%;
+      transform: scale(1.1, 1.1) rotate(1deg);
+      transition: 600ms all ease-in-out;
+    }
+}
+}
+
+.blutu{
+  ion-card{
+    margin-top: 0px;
+    width: 100%;
+    height: 100px;
+    box-shadow: none;
+    border-radius: 8px;
+
+    img{
+      object-fit: cover;
+      width: 100%;
+      transform: scale(1.1, 1.1) rotate(1deg);
+      transition: 600ms all ease-in-out;
+    }
+}
+}
+
+.accesorios{
+  ion-card{
+    margin-top: 0px;
+    width: 100%;
+    height: 100px;
+    box-shadow: none;
+    border-radius: 8px;
+
+    img{
+      object-fit: cover;
+      width: 100%;
+      transform: scale(1.1, 1.1) rotate(1deg);
+      transition: 600ms all ease-in-out;
+    }
+}
+}
+
+//buscador
+app-searchbar{
+  margin-top: 50px;
+}
+
+h1{
+  text-align: center;
+  font-weight: 900;
+  padding-top: 0px;
+  border-radius: 9px;
+  padding-bottom: 0px;
+  text-shadow:0px 3px 6px 0px rgba(0, 0, 0, 0.726) ;
+}
+
+h2{
+  text-shadow:0px 3px 6px 0px rgba(0, 0, 0, 0.726) ;
+  font-weight: 600;
+  padding-left: 20px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
