--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -5,7 +5,11 @@
 
   <!---Header-->
   <div class="header">
-    <h1><Table></Table></h1>
+    <h1>Bienvenido A jaguar Audio
+    </h1>
+    <div class="avatar">
+      <img src="" >
+    </div>
 
   </div>
 
