--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -31,20 +31,29 @@
     </div>
 
     <div class="opciones">
-          <ion-card>
-            <p>EDITAR PERFIL</p>
-            <img src="/assets/icon/3d icon/Key.png" alt="">
-          </ion-card>
 
-          <ion-card>
-            <p>FAVORITOS</p>
-            <img src="/assets/icon/3d icon/Fire.png" alt="">
-          </ion-card>
+      <ion-card color="light">
+        <button ion-item>
+          <ion-card-title><ion-icon name="person-circle-outline"></ion-icon></ion-card-title>
+          <ion-card-subtitle>Editar Perfil</ion-card-subtitle>
+        </button>
+      </ion-card>
 
-          <ion-card>
-            <p>COMPRAS</p>
-            <img src="/assets/icon/3d icon/Shopping.png" alt="">
-          </ion-card>
+
+
+      <ion-card color="light">
+        <button ion-item>
+          <ion-card-title><ion-icon name="bookmark-outline"></ion-icon></ion-card-title>
+          <ion-card-subtitle>Guardados</ion-card-subtitle>
+        </button>
+      </ion-card>
+
+      <ion-card color="light">
+        <button ion-item>
+          <ion-card-title><ion-icon name="bag-check-outline"></ion-icon></ion-card-title>
+          <ion-card-subtitle>Compras</ion-card-subtitle>
+        </button>
+      </ion-card>
     </div>
 
       <h5>Tarjetas</h5>
