--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -1,5 +1,6 @@
 ion-content {
   --background: #fafaff;
+  font-family: 'Oswald', sans-serif;
 }
 
   .header{
@@ -86,7 +87,7 @@ ion-content {
     width: 100%;
     height: 100px;
     box-shadow:
-   0px 3px 6px 0px rgba(0, 0, 0, 0.247);
+   0px 3px 6px 0px rgba(0, 0, 0, 0.336);
     border-radius: 8px;
 
     img{
@@ -139,7 +140,7 @@ app-searchbar{
 
 h1{
   text-align: center;
-  font-weight: 900;
+  font-weight: 1000;
   padding-top: 0px;
   border-radius: 9px;
   padding-bottom: 0px;
@@ -148,7 +149,7 @@ h1{
 
 h2{
   text-shadow:0px 3px 6px 0px rgba(0, 0, 0, 0.726) ;
-  font-weight: 600;
+  font-weight: 500;
   padding-left: 20px;
   padding-top: 0px;
   padding-bottom: 0px;
