--- a/src/app/perfil/perfil.page.scss
+++ b/src/app/perfil/perfil.page.scss
@@ -1,5 +1,5 @@
 ion-content {
-  --background: #1761ff;
+  --background: #0e0e0e;
 }
 
 ion-toolbar {
@@ -32,7 +32,7 @@ ion-toolbar {
 .card-body {
   height: 200px;
   width: 100%;
-  background-color: #ffffff;
+  background-color: #ededec;
   border-radius: 3rem 3rem 0 0;
   height: calc(100vh - (100px + 56px));
   overflow: none;
@@ -41,6 +41,7 @@ ion-toolbar {
       padding-top: 40px;
 
       .playername {
+          margin-top: 0px;
           font-size: 24px;
           font-weight: 600;
           color: #000000;
@@ -64,30 +65,34 @@ ion-toolbar {
   }
 }
 
-ion-button{
-  --background: #141414;
-  --width: 60px;
-     height: 50px;
-  --border-radius: 15px;
+.panel{
+  padding-right: 230px;
+  margin-top: 0;
+  ion-icon{
+    color: #ffffff;
+  }
 }
 
 .opciones{
-  align-items: center;
-  text-align: center;
-  box-sizing:content-box;
   display: flex;
-  grid-gap: 2px;
-
   ion-card{
-    width:100px;
-     height: 120px;
-    //border-radius: 15%;
-    background: #1761ff;
+    padding-top: 20px;
+    text-align: center;
+    text-align-last: center;
+    box-shadow:
+    8px 3px 6px 0px rgb(255, 255, 255),
+    0px 3px 6px 3px rgba(0, 0, 0, 0.075);
+    width: 130px;
+    height: 90px;
+    border-radius: 10px;
+  }
+  button{
+    background: #eaebeb;
   }
   .image-card{
     //padding: 0.8rem;
     width: 30px;
-      height: 30px;
+    height: 30px;
     //border-radius: 10px;
   }
 
@@ -100,5 +105,26 @@ ion-button{
     font-weight: 20;
   }
 }
+
+.swiper-slide-active{
+  transform:scale(1.05,1.05);
+  padding-left: 17px;
+
+  ion-card{
+    background: #00000052;
+    transform: scale(1,1);
+
+  }
+  img{
+    width: 100%;
+    height: 100%;
+  }
+
+}
+
+h5{
+  padding-left: 18px;
+}
+
 
 
