--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -5,10 +5,9 @@
 
   <!---Header-->
   <div class="header">
-    <h1>Bienvenido A jaguar Audio
-    </h1>
+    <h1>David</h1>
     <div class="avatar">
-      <img src="" >
+      <img src="/assets/icon/3d icon/download.jpg" alt="">
     </div>
 
   </div>
@@ -41,13 +40,10 @@
 
   </div>
    <!---Categorias-->
-<div class="categorias">
-  <h1>Categorias</h1>
-</div>
-   <!---Categorias-->
+   <!---Populares-->
 
    <div class="in">
-    <h2>In ears</h2>
+    <h2>Populares</h2>
     <ion-slides [options]="in" class="ion-margin-top">
       <ion-slide>
         <ion-card>
@@ -57,7 +53,7 @@
 
        <ion-slide>
         <ion-card>
-          <img src="/assets/img/blue2.jpg">
+          <img src="/assets/img/headphone2.png">
         </ion-card>
        </ion-slide>
 
@@ -77,61 +73,7 @@
 
    </div>
 
-   <div class="accesorios">
-    <h2>Accesorios</h2>
-    <ion-slides [options]="accesorios" class="ion-margin-top">
 
-      <ion-slide>
-        <ion-card>
-          <img src="/assets/img/accesorios1.jpg">
-        </ion-card>
-       </ion-slide>
-
-       <ion-slide>
-        <ion-card>
-          <img src="/assets/img/accesorios2.jpg">
-        </ion-card>
-       </ion-slide>
-
-       <ion-slide>
-        <ion-card>
-          <img src="/assets/img/accesorios3.jpg">
-        </ion-card>
-       </ion-slide>
-
-       <ion-slide>
-        <ion-card>
-          <img src="/assets/img/accesorios4.jpg">
-        </ion-card>
-       </ion-slide>
-
-      </ion-slides>
-   </div>
-
-   <div class="blutu">
-    <h2>Bluetooth</h2>
-    <ion-slides [options]="blutu" class="ion-margin-top">
-
-      <ion-slide>
-        <ion-card>
-          <img src="/assets/img/blue3.jpg">
-        </ion-card>
-       </ion-slide>
-
-       <ion-slide>
-        <ion-card>
-          <img src="/assets/img/blue5.jpg">
-        </ion-card>
-       </ion-slide>
-
-       <ion-slide>
-        <ion-card>
-          <img src="/assets/img/blue6.jpg">
-        </ion-card>
-       </ion-slide>
-
-      </ion-slides>
-   </div>
 
 
   <!---Buscador-->
