--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -14,14 +14,14 @@
   <div class="card">
     <div class="header">
       <div class="avatar">
-        <img src="/assets/icon/Asian Man.png" alt="">
+        <img src="/assets/icon/3d icon/download.jpg" alt="">
       </div>
     </div>
   </div>
 
   <div class="card-body">
     <div class="user-meta ion-text-center">
-      <h3 class="playername">Miguel</h3>
+      <h3 class="playername">David</h3>
       <h5 class="country">Plata</h5>
       <h6 class="ranking">Notificaciones: <ion-chip>
         <ion-icon name="notifications"></ion-icon>
