--- a/src/app/components/searchbar/searchbar.component.scss
+++ b/src/app/components/searchbar/searchbar.component.scss
@@ -1,13 +1,16 @@
 ion-searchbar{
   --box-shadow:
-   0px 3px 6px 0px rgba(0, 0, 0, 0.048),
-   0px 1px 3px 0px rgba(0, 0, 0, 0.322);
-  --background: #ffffff;
+  8px 3px 6px 0px rgb(255, 255, 255),
+  0px 3px 6px 3px rgba(0, 0, 0, 0.13);
+  --background: #eaebeb;
   --border-radius: 1.2rem;
   --placeholder-fonr-weight:600;
   --placeholder-opacity:0.2;
 
+  text-align: center;
   padding: 0;
+  padding-left: 20px;
+  padding-right:  20px;
   margin-bottom: 2rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
