--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -1,5 +1,5 @@
 ion-content {
-  --background: #fafaff;
+  --background: #efeff0;
   font-family: 'Oswald', sans-serif;
 }
 
@@ -7,10 +7,10 @@ ion-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+    margin-top: 2rem;
+    padding-right: 20px;
     h1{
-      font-size: 2rem;
+      padding-left: 20px;
       font-weight: 600;
       color: rgb(29, 29, 29);
       margin: 24;
@@ -99,43 +99,9 @@ ion-content {
 }
 }
 
-.blutu{
-  ion-card{
-    margin-top: 0px;
-    width: 100%;
-    height: 100px;
-    box-shadow: none;
-    border-radius: 8px;
-
-    img{
-      object-fit: cover;
-      width: 100%;
-      transform: scale(1.1, 1.1) rotate(1deg);
-      transition: 600ms all ease-in-out;
-    }
-}
-}
-
-.accesorios{
-  ion-card{
-    margin-top: 0px;
-    width: 100%;
-    height: 100px;
-    box-shadow: none;
-    border-radius: 8px;
-
-    img{
-      object-fit: cover;
-      width: 100%;
-      transform: scale(1.1, 1.1) rotate(1deg);
-      transition: 600ms all ease-in-out;
-    }
-}
-}
-
 //buscador
 app-searchbar{
-  margin-top: 50px;
+  align-items: center;
 }
 
 h1{
@@ -149,7 +115,7 @@ h1{
 
 h2{
   text-shadow:0px 3px 6px 0px rgba(0, 0, 0, 0.726) ;
-  font-weight: 500;
+  font-weight: 400;
   padding-left: 20px;
   padding-top: 0px;
   padding-bottom: 0px;
