--- a/src/app/tablinks/tablinks.page.html
+++ b/src/app/tablinks/tablinks.page.html
@@ -6,15 +6,15 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="inicio">
-      <ion-icon name="home"></ion-icon>
+      <ion-icon name="grid"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="perfil">
-      <ion-icon name="person"></ion-icon>
+      <ion-icon name="happy"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="config">
-      <ion-icon name="cog"></ion-icon>
+      <ion-icon name="settings"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="Carrito">
