--- a/src/app/tablinks/tablinks.page.scss
+++ b/src/app/tablinks/tablinks.page.scss
@@ -1,16 +1,13 @@
 
 ion-tab-bar{
     --border: none;
-    --background: rgba(255, 255, 255, 0.842);
-    backdrop-filter: blur(6px);
-    border-radius: 16px;
+    --background: rgb(255, 255, 255);
+    //backdrop-filter: blur(6px);
+    border-radius: 26px;
 
     --background: rgb(255, 255, 255);
     backdrop-filter: blur(6px);
 
-    box-shadow:
-    0px 3px 6px 0px rgba(0,0,0,0.04)
-    0px 1px 3px 0px rgba(0,0,0,0.02);;
   }
   ion-icon{
     color: rgb(31, 31, 31);
