--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -1,6 +1,6 @@
 ion-content {
   --background: #efeff0;
-  font-family: 'Oswald', sans-serif;
+  //font-family: 'Oswald', sans-serif;
 }
 
   .header{
@@ -74,10 +74,6 @@ ion-content {
     transform: scale(1,1);
   }
 
-}
-
-.swiper-slide {
-  transition: 400ms all ease-in-out;
 }
 
 
