--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -47,7 +47,7 @@
     <ion-slides [options]="in" class="ion-margin-top">
       <ion-slide>
         <ion-card>
-          <img src="/assets/img/blue1..jpg">
+          <img src="/assets/img/headphone3.png">
         </ion-card>
        </ion-slide>
 
