--- a/src/app/components/category-item/category-item.component.html
+++ b/src/app/components/category-item/category-item.component.html
@@ -4,5 +4,5 @@
   </div>
   <p class="ion-no-margin">{{item.label}}</p>
 </div>
-<!---jejejejejejeje equipo rockect a sido vencido otra vez-->
+<!---jejejejejejeje equipo rockect a ganado esta vez sido vencido otra vez-->
 
