--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -1,6 +1,6 @@
 <ion-header class="ion-no-border">
 </ion-header>
-<ion-content [fullscreen]="true">
+<ion-content >
 
 
   <!---Header-->
@@ -78,6 +78,14 @@
 
   <!---Buscador-->
   <app-searchbar></app-searchbar>
+  <!---listas-->
+
+  <ion-list>
+    <ion-item *ngFor="let character of characters">
+      <ion-label>{{character.name}}</ion-label>
+    </ion-item>
+  </ion-list>
+
 
 
 </ion-content>
