--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -14,15 +14,15 @@
   <div class="card">
     <div class="header">
       <div class="avatar">
-        <img src="/assets/icon/3d icon/download.jpg" alt="">
+        <img src="/assets/icon/3d icon/download.png" alt="">
       </div>
     </div>
   </div>
 
   <div class="card-body">
     <div class="user-meta ion-text-center">
-      <h3 class="playername">David</h3>
-      <h5 class="country">Plata</h5>
+      <h3 class="playername">Morty)</h3>
+      <h5 class="country">(Dimensión desconocida)</h5>
       <button ion-button black (click)="sacarCamara">Tomar Camara</button>
       <button ion-button black (click)="tomarGaleria">Tomar Galeria</button>
       <img [src]="" *ngIf="">
