--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -35,10 +35,10 @@
     <div class="opciones">
 
       <ion-card color="light">
-        <button ion-item>
-          <ion-card-title><ion-icon name="person-circle-outline"></ion-icon></ion-card-title>
+        <ion-tab-button tab="editar">
+          <ion-card-title><ion-icon name="person-circle-outline" style="color: black;"></ion-icon></ion-card-title>
           <ion-card-subtitle>Editar Perfil</ion-card-subtitle>
-        </button>
+        </ion-tab-button>
       </ion-card>
 
 
