--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -2,61 +2,24 @@
 </ion-header>
 
 <ion-content>
-  <div class="sign-container gradient-1">
-    <div class="header">
-      <div class="title ion-text-center">
-        <img src=""/>
-      </div>
-    </div>
 
-    <div class="Paneles">
 
-      <ion-item >
-        <ion-tab-button tab="inicio">
+  <div class="sesion">
+    <ion-item>
+      <ion-input placeholder="Nombre" class="custom"></ion-input>
+    </ion-item>
+    
+    <ion-item>
+      <ion-input placeholder="Contraseña" class="custom"></ion-input>
+    </ion-item>
+  </div>
 
-        </ion-tab-button>
-       </ion-item>
-
-    </div>
-
-    <div class="sign-up-container gradient-2">
-
-      <div class="toggle-text ion-text-center" tappable>
-
-        <span>Registrarse</span>
-        <span>Ingresa tus datos</span>
-        <br>
-        <ion-icon name="arrow-round-up"></ion-icon>
-        <ion-icon name="arrow-round-down"></ion-icon>
-
-      </div>
-
-      <ion-list lines="none" class="form">
-        <ion-item>
-          <ion-label>Usuario</ion-label>
-          <ion-input class="ion-text-right"></ion-input>
-          <ion-icon slot="end" name="person"></ion-icon>
-        </ion-item>
-        <ion-item>
-          <ion-label>Correo</ion-label>
-          <ion-input class="ion-text-right"></ion-input>
-          <ion-icon slot="end" name="at"></ion-icon>
-        </ion-item>
-        <ion-item>
-          <ion-label>Contraseña</ion-label>
-          <ion-input type="password" class="ion-text-right"></ion-input>
-          <ion-icon slot="end" name="key-outline"></ion-icon>
-        </ion-item>
-      </ion-list>
-      
+  
       <div class="ion-text-center">
         <ion-button class="gray-button">
-          Registrar
+          Ingresar
         </ion-button>
       </div>
 
-    </div>
-
-  </div>
-
+ 
 </ion-content>
