--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,3 +1,23 @@
 ion-content{
-    --background: url('/assets/img/fondo1.png') 0 0/100% 100% no-repeat;
+    --background: url('/assets/img/fondo5.gif') 0 0/100% 100% no-repeat;
+}
+
+.sesion{
+    margin-top: 190px;
+    ion-item{
+        margin-top: 20px;
+        border-radius: 18px;
+        margin-left: 30px;
+        margin-right: 30px;
+
+        backdrop-filter: blur(10px);
+         --background: #fcfcfc2c;
+         align-items: center;
+            color: white;
+         
+       }
+}
+
+ion-button{
+    margin-top: 30px;
 }
